samples/_failures_safe/1761332459_b59486_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2fc55f97.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_2fc55f97.c:184:21: error: expected ‘)’ at end of input
  184 |         switch (list
      |                ~    ^
      |                     )
./samples/SAFE/__tmp_2fc55f97.c:184:17: error: switch quantity not an integer
  184 |         switch (list
      |                 ^~~~
./samples/SAFE/__tmp_2fc55f97.c:184:9: error: expected declaration or statement at end of input
  184 |         switch (list
      |         ^~~~~~
./samples/SAFE/__tmp_2fc55f97.c:184:9: error: expected declaration or statement at end of input
